--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div class="dropdown"><li class=" even">
   <div class="dropdown-child"><li class=" even">
-    <a href="/cuento/gatob.html">El gato con botas</a>
+    <a href="/gatob.html">El gato con botas</a>
     <a href="/CUENTO%2/las%20hadas.html">Las hadas</a>
 	<a href="file:///D:/menu/mebu.html">menu</a>
   </div>
