--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div class="dropdown"><li class=" even">
   <div class="dropdown-child"><li class=" even">
-    <a href="gatob.html">El gato con botas</a>
+    <a href="cuento/gatob.html">El gato con botas</a>
     <a href="CUENTO2/lashadas.html">Las hadas</a>
 	
   </div>
